--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,8 +1,12 @@
 set $mod Mod4
 set $term alacritty
 
-output "*" bg ~/Pictures/wallpapers/1.jpg fill
+input * {
+	xkb_layout "us,ru"
+	xkb_options "grp:win_space_toggle, caps:hyper"
+}
 
+output "*" bg ~/Pictures/wallpapers/2.jpg fill
 
 # Color variables
 set $transparent #00000000
@@ -20,9 +24,6 @@ font pango:Noto Sans Regular 9.5
 
 title_align center
 
-gaps inner 4
-gaps outer 0
-
 #for_window [class="^.*"] border pixel 0
 #new_window 1pixel
 default_border normal 0 px
@@ -37,7 +38,7 @@ bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show drun -theme solarized -font "Noto Sans 10" drun
+bindsym $mod+d exec wofi --show drun
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 # change focus
@@ -52,10 +53,7 @@ bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
+# move focused window bindsym $mod+Shift+h move left bindsym $mod+Shift+j move down bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
@@ -129,15 +127,16 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-bindsym $mod+Shift+x exec i3lock
 
+set $locker 'swaylock -f -s fill -i '~/Pictures/wallpapers/2.jpg'
+bindsym $mod+Shift+x exec $locker
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your wayland session.' -b 'Yes, exit sway' 'swaymsg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -165,26 +164,20 @@ mode "resize" {
 }
 
 bar {
-		status_command i3status 
-    workspace_buttons yes
-
-		position top
-		colors {
-			background $black
-			statusline #cdcdcd
-			separator $darkgraycolor
-		 	#                  border  			      backgr.         text
-		 	focused_workspace  $graycolor 	      $graycolor      #cdcdcd
-		 	active_workspace   #333333            #5f676a 				#ffffff
-		 	inactive_workspace $darkgraycolor     $darkgraycolor 	#cdcdcd
-		 	urgent_workspace   $red 							$red  			   	#cdcdcd
-		}
+	swaybar_command waybar
 }
 
-# set some nice colors      border     					background  				text
+#														border     					background  				text
 client.focused              $black     					$black      				#cdcdcd
 client.unfocused            $graycolor        	$graycolor          #cdcdcd
 client.focused_inactive     $darkgraycolor      $darkgraycolor     	$darkgraycolor
+
+# light color theme
+#														border     					background  				text
+client.focused              $graycolor     					#ECECEC      				#303030
+client.unfocused            $graycolor        	$graycolor          #cdcdcd
+client.focused_inactive     $darkgraycolor      $darkgraycolor     	$darkgraycolor
+
 
 #workspace $ws1 output HDMI-0
 #workspace $ws2 output HDMI-0
@@ -193,21 +186,12 @@ client.focused_inactive     $darkgraycolor      $darkgraycolor     	$darkgraycol
 #workspace $ws5 output HDMI-0
 #workspace $ws6 output DVI-0
 
-# Assign Workspaces
-# assign [class="^google-music$"] $ws2
-
 bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
 exec --no-startup-id ~/.screenlayout/1.sh
-exec ~/.fehbg
-exec_always --no-startup-id ~/.config/polybar/launch.sh
-exec_always setxkbmap -layout us,ru -option grp:alt_shift_toggle
-exec_always --no-startup-id compton
-exec_always --no-startup-id twmnd
-exec --no-startup-id redshift-gtk
 
 bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
 bindsym XF86MonBrightnessUp exec brightnessctl set +5%
@@ -216,6 +200,11 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 bindsym XF86Launch1 exec --no-startup-id alacritty -e nvim
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-sink-input-mute @DEFAULT_SINK@ toggle # mute sound
-exec --no-startup-id dockd --daemon
-exec_always --no-startup-id xset led
-bindsym $mod+p exec /home/fami/.config/i3/i3lock-multimonitor/lock
+
+exec swayidle -w \
+	timeout 30 '$locker' \
+	timeout 600 'swaymsg "output * dpms off"' \
+	resume 'swaymsg "output * dpms on"' \
+	before-sleep '$locker'
+
+
