--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,12 +1,6 @@
-set $mod Mod4
+######### Variables ############
+
 set $term alacritty
-
-input * {
-	xkb_layout "us,ru"
-	xkb_options "grp:win_space_toggle, caps:hyper"
-}
-
-output "*" bg ~/Pictures/wallpapers/2.jpg fill
 
 # Color variables
 set $transparent #00000000
@@ -18,80 +12,7 @@ set $graycolor #424242
 set $darkgraycolor #212121
 set $red #E57373
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:Noto Sans Regular 9.5
-
-title_align center
-
-#for_window [class="^.*"] border pixel 0
-#new_window 1pixel
-default_border normal 0 px
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-# start a terminal
-bindsym $mod+Return exec $term
-
-# kill focused window
-bindsym $mod+Shift+q kill
-
-# start dmenu (a program launcher)
-bindsym $mod+d exec wofi --show drun
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-# change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
-# move focused window bindsym $mod+Shift+h move left bindsym $mod+Shift+j move down bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-# split in vertical orientation
-bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-bindsym $mod+m move workspace to output left
-
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
-
-# Screenshot
-bindsym Print exec flameshot gui
-# bindsym Shift+Print exec mate-screenshot -w
-
 # Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -103,7 +24,83 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
+################################
+
+######### Input config ##########
+
+set $mod Mod4
+
+# Keyboard config
+input * {
+	xkb_layout "us,ru"
+	xkb_options "grp:win_space_toggle"
+}
+
+# Touchpad config
+input "1739:0:Synaptics_TM3075-002" {
+        accel_profile adaptive
+        click_method button_areas
+        dwt disabled
+        natural_scroll enabled
+        scroll_method two_finger
+        tap enabled
+}
+
+# Open terminal
+bindsym $mod+Return exec $term
+
+# kill focused window
+bindsym $mod+Shift+q kill
+
+# Start program launcher
+bindsym $mod+d exec wofi --show drun
+
+
+# Focus window
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
+
+# Move window
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
+
+# Split in vertical orientation
+bindsym $mod+v split v
+
+# Enter fullscreen mode for the focused container
+bindsym $mod+f fullscreen toggle
+
+# Toggle tiling / floating
+bindsym $mod+Shift+space floating toggle
+
+# Change focus between tiling / floating windows
+bindsym $mod+space focus mode_toggle
+
+# Change container layout (stacked, tabbed, toggle split)
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
+bindsym $mod+m move workspace to output left
+
+# Focus the parent container
+bindsym $mod+a focus parent
+
+# Focus the child container
+#bindsym $mod+d focus child
+
+# Switch to workspace
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
 bindsym $mod+3 workspace $ws3
@@ -115,7 +112,7 @@ bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
 
-# move focused container to workspace
+# Move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+2 move container to workspace $ws2
 bindsym $mod+Shift+3 move container to workspace $ws3
@@ -131,42 +128,63 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 set $locker 'swaylock -f -s fill -i '~/Pictures/wallpapers/2.jpg'
 bindsym $mod+Shift+x exec $locker
 
-# reload the configuration file
+# Screenshot
+bindsym $mod+Shift+p exec grim -g "$(slurp -d)" - | wl-copy
+
+# Reload the configuration file
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+
+# Restart sway inplace 
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
+
+# Exit sway 
 bindsym $mod+Shift+e exec "swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your wayland session.' -b 'Yes, exit sway' 'swaymsg exit'"
 
-# resize window (you can also use the mouse for that)
+# Resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+	bindsym h resize shrink width 10 px or 10 ppt
+	bindsym j resize grow height 10 px or 10 ppt
+	bindsym k resize shrink height 10 px or 10 ppt
+	bindsym l resize grow width 10 px or 10 ppt
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+	# same bindings, but for the arrow keys
+	bindsym Left resize shrink width 10 px or 10 ppt
+	bindsym Down resize grow height 10 px or 10 ppt
+	bindsym Up resize shrink height 10 px or 10 ppt
+	bindsym Right resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape or $mod+rR
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
+	# back to normal: Enter or Escape or $mod+rR
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
+	bindsym $mod+r mode "default"
 }
 
-bar {
-	swaybar_command waybar
-}
+bindsym $mod+r mode "resize"
 
+# Media keys
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
+bindsym XF86Launch1 exec --no-startup-id alacritty
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-sink-input-mute @DEFAULT_SINK@ toggle # mute sound
+
+################################
+
+######### Appearance ###########
+
+# Background image
+output "*" bg ~/Pictures/wallpapers/2.jpg fill
+
+font pango:Noto Sans Regular 9.5
+title_align center
+default_border normal 0 px
+
+# Use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
+
+# Color theme
 #														border     					background  				text
 client.focused              $black     					$black      				#cdcdcd
 client.unfocused            $graycolor        	$graycolor          #cdcdcd
@@ -174,9 +192,15 @@ client.focused_inactive     $darkgraycolor      $darkgraycolor     	$darkgraycol
 
 # light color theme
 #														border     					background  				text
-client.focused              $graycolor     					#ECECEC      				#303030
+# client.focused              $graycolor     					#ECECEC      				#303030
 client.unfocused            $graycolor        	$graycolor          #cdcdcd
 client.focused_inactive     $darkgraycolor      $darkgraycolor     	$darkgraycolor
+
+################################
+
+bar {
+	swaybar_command waybar
+}
 
 
 #workspace $ws1 output HDMI-0
@@ -185,21 +209,6 @@ client.focused_inactive     $darkgraycolor      $darkgraycolor     	$darkgraycol
 #workspace $ws4 output HDMI-0
 #workspace $ws5 output HDMI-0
 #workspace $ws6 output DVI-0
-
-bindsym $mod+r mode "resize"
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-
-exec --no-startup-id ~/.screenlayout/1.sh
-
-bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
-bindsym XF86MonBrightnessUp exec brightnessctl set +5%
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
-bindsym XF86Launch1 exec --no-startup-id alacritty -e nvim
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-sink-input-mute @DEFAULT_SINK@ toggle # mute sound
 
 exec swayidle -w \
 	timeout 30 '$locker' \
